[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/player.png" type="Texture" id=1]
[ext_resource path="res://Classes/Player.gd" type="Script" id=2]
[ext_resource path="res://Classes/Crosshair.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 7.60916

[node name="Player" type="KinematicBody2D"]
modulate = Color( 0.141176, 0.960784, 0.364706, 1 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HoleDetector" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HoleDetector"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="MouseAnchor" type="Position2D" parent="."]

[node name="CursorDirection" parent="MouseAnchor" instance=ExtResource( 3 )]
position = Vector2( 58.7741, 0 )

[node name="Tween" type="Tween" parent="."]
[connection signal="area_entered" from="HoleDetector" to="." method="_on_HoleDetector_area_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
